# UNIT_sdk

./: .gitignore  CMakeLists.txt
src/: AccessToken.cpp  AccessToken.h  Utterance.cpp  Utterance.h  VoiceRecognition.cpp  VoiceRecognition.h  VoiceSynthesis.cpp  VoiceSynthesis.h  main.cpp
